# openquant

./: .cursorrules  .env.example  .gitignore  AGENTS.md  CLAUDE.md  PLAN.md  README.md  publish.sh  pyproject.toml
SKILLS/: hermes.md
SKILLS/openquant-trading/: SKILL.md
src/openquant/: __init__.py  config.py  storage.py
src/openquant/agent/: __init__.py  loop.py  providers.py  system.py  tools.py
src/openquant/agents/: __init__.py  base.py  growth_agent.py  insider_agent.py  sentiment_agent.py  technical_agent.py  value_agent.py
src/openquant/brokers/: __init__.py  alpaca.py  base.py  kalshi.py  paper.py
src/openquant/cli/: __init__.py  display.py  main.py
src/openquant/data/: __init__.py  protocol.py  quantfetch_provider.py  resolver.py  sec_edgar_provider.py  yfinance_provider.py
src/openquant/game/: __init__.py  engine.py  models.py  persistence.py
src/openquant/insider/: __init__.py  models.py  monitor.py  scorer.py
src/openquant/mcp/: __init__.py  server.py
src/openquant/risk/: __init__.py  engine.py  models.py  sizing.py  var.py
src/openquant/strategies/: __init__.py  base.py  earnings_surge.py  insider_momentum.py  technical_breakout.py  value_deep.py
src/openquant/tui/: __init__.py  app.py
src/openquant/tui/panels/: __init__.py  chat.py  portfolio.py  ticker_detail.py  watchlist.py
